[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["DRomanov <lukaviy2la@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
